# hokeylog

./: .gitignore  Main.hs  hokeylog.cabal
Language/HokeyLog/: HLint.hs  Parser.hs  Program.hs  Syntax.hs
src/: Main.hs
src/Language/HokeyLog/: Monad.hs  Parser.hs  Prim.hs  Program.hs
