name:                hokeylog
version:             0.1
synopsis:            datalog by composition of other libraries
license:             BSD3
author:              Alec Heller
maintainer:          alec@deviant-logic.net
category:            Language
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: git://github.com/deviant-logic/hokeylog.git

executable hokeylog
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:       base ==4.6.*,
                       mtl ==2.1.*,
                       unordered-containers ==0.2.*,
                       parsers ==0.8.*,
                       trifecta ==1.0.*,
                       unification-fd ==0.8.*,
                       transformers ==0.3.*,
                       hashable ==1.2.*,
                       containers ==0.5.*,
                       logict ==0.6.*,
                       bytestring,
                       intern,
                       vector,
                       list-tries,
                       haskeline
  ghc-options: -rtsopts
